--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ body {
   position: absolute;
   top: 0; left: 0;
   width: 100%; height: 100%;
-  background-image: url('build-bg.jpg');
+  background-image: url('siteimage.png');
   background-size: cover;
   background-position: center;
   filter: blur(4px);
