--- a/style.css
+++ b/style.css
@@ -12,14 +12,15 @@ header {
 }
 
 .mode-toggle button {
-  background: #fff;
-  color: #333;
-  border: none;
-  margin: 0 5px;
-  padding: 8px 16px;
-  font-weight: bold;
-  cursor: pointer;
-  border-radius: 5px;
+
+  text-align: center;
+  background: transparent;
+  padding: 16px 0;
+  font-size: 1.2rem;
+  position: relative;
+  z-index: 2;
+
+
 }
 
 .site {
