--- a/style.css
+++ b/style.css
@@ -11,17 +11,18 @@ header {
   text-align: right;
 }
 
-.mode-toggle button {
-
+.mode-toggle.text-toggle {
   text-align: center;
-  background: transparent;
   padding: 16px 0;
   font-size: 1.2rem;
-  position: relative;
+  position: absolute;
+  top: 20px;
+  left: 0;
+  width: 100%;
   z-index: 2;
-
-
+  background: none;
 }
+
 
 .site {
   display: none;
