--- a/style.css
+++ b/style.css
@@ -6,21 +6,21 @@ body {
 }
 
 header {
-  background: #333;
+  background:transparent;
   padding: 10px;
   text-align: right;
 }
 
 .mode-toggle.text-toggle {
+  .mode-toggle.text-toggle {
   text-align: center;
+  background: transparent;
   padding: 16px 0;
   font-size: 1.2rem;
-  position: absolute;
-  top: 20px;
-  left: 0;
-  width: 100%;
+  position: relative;
   z-index: 2;
-  background: none;
+}
+
 }
 
 
