--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ body {
   position: absolute;
   top: 0; left: 0;
   width: 100%; height: 100%;
-  background-image: url('siteimage1.png');
+  background-image: url('siteimage.png');
   background-size: cover;
   background-position: center;
  
