--- a/style.css
+++ b/style.css
@@ -155,18 +155,25 @@ body {
   margin: 0 8px;
 }
 
-#site-build::before {
+
+  #site-build::before {
   content: "";
   position: absolute;
   top: 0; left: 0;
   width: 100%; height: 100%;
-  background-image: url('siteimage.png');
+  z-index: -1;
+  opacity: 0.5;
+ 
+  background:
+    linear-gradient(to right, rgba(255,255,255,0.6) 0%, transparent 15%, transparent 85%, rgba(255,255,255,0.6) 100%),
+    linear-gradient(to top, rgba(255,255,255,0.6), transparent 150px),
+    url('build-bg.jpg');
   background-size: cover;
   background-position: center;
- 
-  z-index: -1;
-opacity: .5;
+  background-repeat: no-repeat;
 }
+
+ 
 
 
 
