--- a/style.css
+++ b/style.css
@@ -157,18 +157,20 @@ body {
 
 
   #site-build::before {
+#site-build::before {
   content: "";
   position: absolute;
   top: 0; left: 0;
   width: 100%; height: 100%;
-  z-index: -1;
-  opacity: 0.5;
- 
-  background:
-    url('build-bg.jpg');
+  background-image: url('build-bg.jpg'); /* make sure this filename matches your image */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  filter: blur(.3px);
+  opacity: 0.5;
+  z-index: -1;
+}
+
 }
 
  
