--- a/style.css
+++ b/style.css
@@ -200,6 +200,31 @@ body {
   padding: 0 20px;
 }
 
+.hero-heading {
+  font-family: 'Poppins', sans-serif;
+  font-size: 3.5rem;
+  font-weight: 600;
+  line-height: 1.2;
+  text-align: center;
+  color: black;
+}
+
+.hero-heading .line {
+  display: block;
+}
+
+.hero-heading .indent {
+  padding-left: 1.5rem;
+}
+
+.hero-heading .black {
+  color: #000;
+}
+
+.hero-heading .gray {
+  color: #888;
+}
+
 
 
 
