--- a/style.css
+++ b/style.css
@@ -195,9 +195,11 @@ body {
 
 .hero-content {
   z-index: 2;
-  color: #fff;
-  text-align: center;
-  padding: 0 20px;
+  color: black;
+  text-align: left;
+  padding-left: 8%;
+  max-width: 600px;
+  position: relative;
 }
 
 .hero-heading {
@@ -205,7 +207,6 @@ body {
   font-size: 3.5rem;
   font-weight: 600;
   line-height: 1.2;
-  text-align: center;
   color: black;
 }
 
@@ -214,7 +215,7 @@ body {
 }
 
 .hero-heading .indent {
-  padding-left: 1.5rem;
+  padding-left: 2rem;
 }
 
 .hero-heading .black {
@@ -224,6 +225,7 @@ body {
 .hero-heading .gray {
   color: #888;
 }
+
 
 
 
