--- a/style.css
+++ b/style.css
@@ -116,6 +116,18 @@ button {
   z-index: -1;
   transform: scale(1);
   transition: transform 0.2s ease-out;
+  filter: blur(4px);
+}
+
+/* Gradient Overlay */
+.hero-bg::after {
+  content: "";
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(255, 255, 255, 0));
+  backdrop-filter: blur(4px);
+  z-index: 1;
 }
 
 .hero-content.left-aligned {
@@ -129,7 +141,7 @@ button {
 
 .hero-heading {
   font-family: 'Poppins', sans-serif;
-  font-size: 3.5rem;
+  font-size: 4.5rem;
   font-weight: 600;
   line-height: 1.2;
   color: black;
@@ -150,6 +162,7 @@ button {
 .hero-heading .gray {
   color: #888;
 }
+
 
 
 
